<resources>
    <string name="app_name">All In One News</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_id">ca-app-pub-2623676331956176~5835166485</string>
    <string name="aionBanner">ca-app-pub-2623676331956176/7859883966</string>
    //Production
    <!--    <string name="aionBanner">ca-app-pub-3940256099942544/6300978111</string> //Testing-->
    <string name="aionInterstital">ca-app-pub-2623676331956176/7995615336</string>//Production
    <!--    <string name="aionInterstital">ca-app-pub-3940256099942544/1033173712</string> //Testing-->

    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="home">Home</string>
    <string name="about_app">About App</string>
    <string name="about_developer">About Developer</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="bannerimage">bannerImage</string>
    <string name="developed_by">Developed By :</string>
    <string name="developerName">Jayu</string>
    <string name="lets_connect">Lets Connect</string>
    <string name="githubimage">githubImage</string>
    <string name="telegramimage">telegramImage</string>
    <string name="instaimage">instaImage</string>
    <string name="gmailimage">gmailImage</string>
    <string name="twitterimage">twitterImage</string>
    <string name="linkdinimage">linkdinImage</string>

    <string name="developerDescription">"My name is Jay Parmar. I'm android developer with kotlin language and also knows JAVA, C, Python, HTML, CSS,etc. If you want any help in above languages or want any other help you can contact me using any methods below. My projects are available in Github you can check if you want to learn these things. I will appreciate, if you give me suggestions to make these better."</string>
    <string name="appDescription">"This app is created using Android Studio and Kotlin language. In this app, you can visit different news providers' news in a single click, and you don't have to search differently for other new providers' information. The data provided here is the RSS Feed of the company. If you know any other providers who offer RSS Feed or you want to add any other providers to this app, kindly contact me using any methods shown below, and I will try to add it. I appreciate, if you give me suggestions to make this app better."</string>
    <string name="open_in_browser">Open in Browser</string>
    <string name="logo_image">Logo Image</string>

</resources>